@@ -52,6 +52,9 @@ Version 3.5.9_1 (beta for 3.6.0)
   - Fix UTF8 flag handling in pg_(get|put)copydata
     [Dagfinn Ilmari Mannsåker]
 
+  - Support binary COPY format
+    [Dagfinn Ilmari Mannsåker]
+
   - Switched canonical repo to git://github.com/bucardo/dbdpg.git
 
 
